syntax = "proto3";

package books;

service BooksController {
    rpc findAllGRPC ( Empty ) returns ( AllBooks );
}

message AllBooks {
    repeated Book books = 1;
}

message Book {
    int32 id = 1;
    int32 authorId = 2;
    string title = 3;
    
    string description = 4;
    
}

message Empty {}